--- a/app/src/main/res/layout/activity_screenfour.xml
+++ b/app/src/main/res/layout/activity_screenfour.xml
@@ -1,27 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:padding="16dp"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="100">
+    tools:context=".ScreenFourActivity">
+
+    <Button
+        android:id="@+id/buttonBuy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="400dp"
+        android:layout_marginLeft="80dp"
+        android:text="@string/buy" />
+
+    <Button
+        android:id="@+id/buttonSell"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="400dp"
+        android:layout_marginLeft="200dp"
+        android:text="@string/sell" />
+
+
 
     <ImageView
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="20dp"
         android:id="@+id/symbolImg"
-        android:layout_width="149dp"
-        android:layout_height="0dp"
-        android:layout_weight="20"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:scaleType="centerCrop"
         android:src="@mipmap/ic_launcher" />
 
     <TextView
+
         android:id="@+id/cryptoDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="30dp"
         android:text="Hardcoded text"
         android:textColor="@android:color/black"
         android:textSize="30sp" />
-</LinearLayout>
+
+
+
+
+
+</RelativeLayout>
