--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,5 +6,16 @@
         <item name="colorPrimaryDark">@color/black</item>
         <item name="colorAccent">@color/teal_200</item>
     </style>
-    
+
+    <style name="text_label">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_width">100dp</item>
+    </style>
+
+    <style name="edit_text_style">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_width">200dp</item>
+    </style>
+
 </resources>
