--- a/app/src/main/res/layout/activity_screenfour.xml
+++ b/app/src/main/res/layout/activity_screenfour.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="400dp"
-        android:layout_marginLeft="80dp"
+        android:layout_marginStart="90dp"
         android:text="@string/buy" />
 
     <Button
@@ -20,14 +20,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="400dp"
-        android:layout_marginLeft="200dp"
+        android:layout_marginStart="200dp"
         android:text="@string/sell" />
 
 
 
     <ImageView
         android:layout_marginTop="16dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:id="@+id/symbolImg"
         android:layout_width="90dp"
         android:layout_height="90dp"
@@ -39,14 +39,35 @@
         android:id="@+id/cryptoDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="150dp"
+        android:layout_marginStart="150dp"
         android:layout_marginTop="30dp"
-        android:text="Hardcoded text"
+        android:text="@string/hardcoded_text"
         android:textColor="@android:color/black"
         android:textSize="30sp" />
 
 
+    <LinearLayout
+
+        android:layout_marginTop="160dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/drawable_back"
+        >
 
 
+    <TextView
+        android:text="@string/youhave"
+        android:layout_height="300dp"
+        android:layout_width="wrap_content"
+        android:textSize="20sp"
+        android:layout_marginStart="50dp"
+        android:textColor="@color/black">
+    </TextView>
+
+
+
+
+    </LinearLayout>
 
 </RelativeLayout>
